fixed fourth page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="краткое описание страницы">
+    <meta name="keywords" content="Перечень ключевых слов">
+
 
 
     <link rel="stylesheet" href="libs/bootstrap-grid-3.3.2.min.css">
@@ -47,7 +50,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <img class="HEADER_img" src="img/header1200.png" alt="header">
+                    <img class="HEADER_img" src="img/header1200.png" title="" alt="header">
                     <!-- вставляеться стандартная шапка-->
                 </div>
             </div>
@@ -115,27 +118,27 @@
                                     <div class="box-fullLogo__item">
                                         <a class="box-avto" href="index_model.html">
                                             <img class="box-avto__image"
-                                                 src="img/avtoLogo/256c4b52d90232ec143be7355132ad85.jpg" alt="avto">
+                                                 src="img/avtoLogo/256c4b52d90232ec143be7355132ad85.jpg" title="" alt="avto">
                                             <p class="box-avto__mark">Audi</p>
                                         </a>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/2589665139b52239269ed29810611fad.gif" alt="avto">
+                                                     src="img/avtoLogo/2589665139b52239269ed29810611fad.gif" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/4bd4c0372c072d7318fe51aea6fca2c0.jpg" alt="avto">
+                                                     src="img/avtoLogo/4bd4c0372c072d7318fe51aea6fca2c0.jpg" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/6472342cfd81bccadd1eb32546bccc10.jpg" alt="avto">
+                                                     src="img/avtoLogo/6472342cfd81bccadd1eb32546bccc10.jpg" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
@@ -145,27 +148,27 @@
                                     <div class="box-fullLogo__item">
                                         <a class="box-avto" href="#">
                                             <img class="box-avto__image"
-                                                 src="img/avtoLogo/7fcecde5e7f1b1889ce350372adeba1c.png" alt="avto">
+                                                 src="img/avtoLogo/7fcecde5e7f1b1889ce350372adeba1c.png" title="" alt="avto">
                                             <p class="box-avto__mark">Audi</p>
                                         </a>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/8874b0d7678bb90e7ac783199d9f9dd4.jpg" alt="avto">
+                                                     src="img/avtoLogo/8874b0d7678bb90e7ac783199d9f9dd4.jpg" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/950f3e6a5ac70335d0b4361ef891227b.jpg" alt="avto">
+                                                     src="img/avtoLogo/950f3e6a5ac70335d0b4361ef891227b.jpg" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/9c7be8e944a8f25b9ae9607947dd3474.jpg" alt="avto">
+                                                     src="img/avtoLogo/9c7be8e944a8f25b9ae9607947dd3474.jpg" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
@@ -175,27 +178,27 @@
                                     <div class="box-fullLogo__item">
                                         <a class="box-avto" href="#">
                                             <img class="box-avto__image"
-                                                 src="img/avtoLogo/b54b753a1625332e1ebfed73eb5ef1cc.png" alt="avto">
+                                                 src="img/avtoLogo/b54b753a1625332e1ebfed73eb5ef1cc.png" title="" alt="avto">
                                             <p class="box-avto__mark">Audi</p>
                                         </a>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/b96eb10101a5b43c1e7ca8007f1880d9.jpg" alt="avto">
+                                                     src="img/avtoLogo/b96eb10101a5b43c1e7ca8007f1880d9.jpg" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/c16f1628d9390bcbf8726a840a15e694.png" alt="avto">
+                                                     src="img/avtoLogo/c16f1628d9390bcbf8726a840a15e694.png" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/cc6f21bf987bc46551b39d30faaf108b.jpg" alt="avto">
+                                                     src="img/avtoLogo/cc6f21bf987bc46551b39d30faaf108b.jpg" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
@@ -205,27 +208,27 @@
                                     <div class="box-fullLogo__item">
                                         <a class="box-avto" href="#">
                                             <img class="box-avto__image"
-                                                 src="img/avtoLogo/cc7177a815faf2bf978aaed962e288a1.jpg" alt="avto">
+                                                 src="img/avtoLogo/cc7177a815faf2bf978aaed962e288a1.jpg" title="" alt="avto">
                                             <p class="box-avto__mark">Audi</p>
                                         </a>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/e4e18488c7af3071980ebdd13483b0da.png" alt="avto">
+                                                     src="img/avtoLogo/e4e18488c7af3071980ebdd13483b0da.png" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/e6dcdeeea87c4aad7284de209343c804.png" alt="avto">
+                                                     src="img/avtoLogo/e6dcdeeea87c4aad7284de209343c804.png" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
                                         <div class="box-fullLogo__item">
                                             <a class="box-avto" href="#">
                                                 <img class="box-avto__image"
-                                                     src="img/avtoLogo/f6e4507472e01c8bf1cc4b43d7959d62.png" alt="avto">
+                                                     src="img/avtoLogo/f6e4507472e01c8bf1cc4b43d7959d62.png" title="" alt="avto">
                                                 <p class="box-avto__mark">Audi</p>
                                             </a>
                                         </div>
@@ -303,40 +306,40 @@
                                     <ul class="box-sliderOne__items ">
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide1.jpg"
                                             data-src="img/slider1/slide1.jpg">
-                                            <img src="img/slider1/slide1.jpg" alt="slider1">
+                                            <img src="img/slider1/slide1.jpg" title="" alt="slider1">
                                         </li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide2.jpg"
                                             data-src="img/slider1/slide2.jpg">
-                                            <img src="img/slider1/slide2.jpg" alt="slider1">
+                                            <img src="img/slider1/slide2.jpg" title="" alt="slider1">
                                         </li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide3.jpg"
                                             data-src="img/slider1/slide3.jpg">
-                                            <img src="img/slider1/slide3.jpg" alt="slider1">
+                                            <img src="img/slider1/slide3.jpg" title="" alt="slider1">
                                         </li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide4.jpg"
                                             data-src="img/slider1/slide4.jpg">
-                                            <img src="img/slider1/slide4.jpg" alt="slider1">
+                                            <img src="img/slider1/slide4.jpg" title="" alt="slider1">
                                         </li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide5.jpg"
                                             data-src="img/slider1/slide5.jpg">
-                                            <img src="img/slider1/slide5.jpg" alt="slider1">
+                                            <img src="img/slider1/slide5.jpg" title="" alt="slider1">
                                         </li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide6.jpg"
                                             data-src="img/slider1/slide6.jpg">
-                                            <img src="img/slider1/slide6.jpg" alt="slider1">
+                                            <img src="img/slider1/slide6.jpg" title="" alt="slider1">
                                         </li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide7.jpg"
                                             data-src="img/slider1/slide7.jpg">
-                                            <img src="img/slider1/slide7.jpg" alt="slider1"></li>
+                                            <img src="img/slider1/slide7.jpg" title="" alt="slider1"></li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide8.jpg"
                                             data-src="img/slider1/slide8.jpg">
-                                            <img src="img/slider1/slide8.jpg" alt="slider1"></li>
+                                            <img src="img/slider1/slide8.jpg" title="" alt="slider1"></li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide9.jpg"
                                             data-src="img/slider1/slide9.jpg">
-                                            <img src="img/slider1/slide9.jpg" alt="slider1"></li>
+                                            <img src="img/slider1/slide9.jpg" title="" alt="slider1"></li>
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide10.jpg"
                                             data-src="img/slider1/slide10.jpg">
-                                            <img src="img/slider1/slide10.jpg" alt="slider1">
+                                            <img src="img/slider1/slide10.jpg" title="" alt="slider1">
                                         </li>
                                     </ul>
                                 </div>
@@ -363,7 +366,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="footerImg">
-                        <img src="img/footer1200.png" alt="footer">
+                        <img src="img/footer1200.png" title="" alt="footer">
                     </div>
 
                 </div>
