--- a/index_model.html
+++ b/index_model.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="краткое описание страницы">
+    <meta name="keywords" content="Перечень ключевых слов">
 
 
     <link rel="stylesheet" href="libs/bootstrap-grid-3.3.2.min.css">
@@ -47,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <img class="HEADER_img" src="img/header1200.png" alt="header">
+                    <img class="HEADER_img" src="img/header1200.png" title="" alt="header">
                     <!-- вставляеться стандартная шапка-->
                 </div>
             </div>
@@ -115,19 +117,19 @@
                             <div class="col-md-4">
                                 <a href="index_offers.html">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A5Coupe.png" alt="audi">
+                                        <img src="img/marks/Audi/A5Coupe.png" title=""  alt="audi">
                                         <p class="box-avtoModdel__name box-avto_mark-A5Coupe">A5 Coupe</p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A6Limousine.png" alt="audi">
+                                        <img src="img/marks/Audi/A6Limousine.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A6 Limousin</p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A8.png" alt="audi">
+                                        <img src="img/marks/Audi/A8.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A8 </p>
                                     </div>
                                 </a>
@@ -135,19 +137,19 @@
                             <div class="col-md-4">
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A5Coupe.png" alt="audi">
+                                        <img src="img/marks/Audi/A5Coupe.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name box-avto_mark-A5Coupe">A5 Coupe</p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A6Limousine.png" alt="audi">
+                                        <img src="img/marks/Audi/A6Limousine.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A6 Limousin</p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A8.png" alt="audi">
+                                        <img src="img/marks/Audi/A8.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A8 </p>
                                     </div>
                                 </a>
@@ -155,19 +157,19 @@
                             <div class="col-md-4">
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A5Coupe.png" alt="audi">
+                                        <img src="img/marks/Audi/A5Coupe.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name box-avto_mark-A5Coupe">A5 Coupe</p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A6Limousine.png" alt="audi">
+                                        <img src="img/marks/Audi/A6Limousine.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A6 Limousin</p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
-                                        <img src="img/marks/Audi/A8.png" alt="audi">
+                                        <img src="img/marks/Audi/A8.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A8 </p>
                                     </div>
                                 </a>
@@ -186,7 +188,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="box-gboInfo_item">
-                            <img class="box-gboInfo_img" src="img/GBO/landi.png" alt="gbo">
+                            <img class="box-gboInfo_img" src="img/GBO/landi.png" title="" alt="gbo">
                             <p class="box-gboInfo__price">Цена: <span class="prace-gbo__uah">9550</span>/<span class="prace-gbo__euro">335</span> </p>
                             <span class="box-gboInfo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                             Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.
@@ -201,14 +203,14 @@
                             </span>
                         </div>
                         <div class="box-gboInfo_item">
-                            <img class="box-gboInfo_img" src="img/GBO/lovanto.png" alt="gbo">
+                            <img class="box-gboInfo_img" src="img/GBO/lovanto.png" title="" alt="gbo">
                             <p class="box-gboInfo__price">Цена: <span class="prace-gbo__uah">10500</span>/<span class="prace-gbo__euro">405</span> </p>
                             <span class="box-gboInfo_text">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.Cumque dolores, facere laboriosam magnam molestiae optio quasi reprehenderit voluptatum.
                             </span>
                         </div>
                         <div class="box-gboInfo_item">
-                            <img class="box-gboInfo_img" src="img/GBO/stag.png" alt="gbo">
+                            <img class="box-gboInfo_img" src="img/GBO/stag.png" title="" alt="gbo">
                             <p class="box-gboInfo__price">Цена: <span class="prace-gbo__uah">14100</span>/<span class="prace-gbo__euro">544</span> </p>
                             <span class="box-gboInfo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                             Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.
@@ -245,7 +247,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="footerImg">
-                        <img src="img/footer1200.png" alt="footer">
+                        <img src="img/footer1200.png" title="" alt="footer">
                     </div>
 
                 </div>
