--- a/index_offers.html
+++ b/index_offers.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="краткое описание страницы">
+    <meta name="keywords" content="Перечень ключевых слов">
 
 
     <link rel="stylesheet" href="libs/bootstrap-grid-3.3.2.min.css">
@@ -47,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <img class="HEADER_img" src="img/header1200.png" alt="header">
+                    <img class="HEADER_img" src="img/header1200.png" title="" alt="header">
                     <!-- вставляеться стандартная шапка-->
                 </div>
             </div>
@@ -113,9 +115,9 @@
                     <div class="box-offers">
                         <div class="row">
                             <div class="col-md-6">
-                                <a class="box-gbo__link" href="#">
+                                <a class="box-gbo__link" href="index_portfolio.html">
                                     <div class="box-gbo__offer">
-                                        <img class="box-gbo__offer-image" src="../img/offers/daewoo-l__1.png" alt="gbo">
+                                        <img class="box-gbo__offer-image" src="../img/offers/daewoo-l__1.png" title="" alt="gbo">
                                         <p class="box-gbo__offer-text">econom</p>
 
                                     </div>
@@ -123,7 +125,7 @@
                                 <a class="box-gbo__link" href="#">
                                     <div class="box-gbo__offer">
                                         <img class="box-gbo__offer-image" src="../img/offers/audi_s6_sedan_2012___2.png"
-                                             alt="gbo">
+                                             title="" alt="gbo">
                                         <p class="box-gbo__offer-text">premium</p>
                                     </div>
                                 </a>
@@ -132,13 +134,13 @@
                                 <a class="box-gbo__link" href="#">
                                     <div class="box-gbo__offer">
                                         <img class="box-gbo__offer-image"
-                                             src="../img/offers/audi-rs-q3-tfsi-mtm-122__3.png" alt="gbo">
+                                             src="../img/offers/audi-rs-q3-tfsi-mtm-122__3.png" title="" alt="gbo">
                                         <p class="box-gbo__offer-text">standart</p>
                                     </div>
                                 </a>
                                 <a class="box-gbo__link" href="#">
                                     <div class="box-gbo__offer">
-                                        <img class="box-gbo__offer-image" src="../img/offers/porsh__4.png" alt="gbo">
+                                        <img class="box-gbo__offer-image" src="../img/offers/porsh__4.png" title="" alt="gbo">
 
                                         <p class="box-gbo__offer-text">Lux</p>
                                     </div>
@@ -151,7 +153,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="box-gboInfo_item">
-                                            <img class="box-gboInfo_img" src="img/GBO/landi.png" alt="gbo">
+                                            <img class="box-gboInfo_img" src="img/GBO/landi.png" title="" alt="gbo">
                                             <p class="box-gboInfo__price">Цена: <span class="prace-gbo__uah">9550</span>/<span
                                                     class="prace-gbo__euro">335</span></p>
                                             <span class="box-gboInfo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -167,7 +169,7 @@
                             </span>
                                         </div>
                                         <div class="box-gboInfo_item">
-                                            <img class="box-gboInfo_img" src="img/GBO/lovanto.png" alt="gbo">
+                                            <img class="box-gboInfo_img" src="img/GBO/lovanto.png" title="" alt="gbo">
                                             <p class="box-gboInfo__price">Цена: <span
                                                     class="prace-gbo__uah">10500</span>/<span class="prace-gbo__euro">405</span>
                                             </p>
@@ -176,7 +178,7 @@
                             </span>
                                         </div>
                                         <div class="box-gboInfo_item">
-                                            <img class="box-gboInfo_img" src="img/GBO/stag.png" alt="gbo">
+                                            <img class="box-gboInfo_img" src="img/GBO/stag.png" title="" alt="gbo">
                                             <p class="box-gboInfo__price">Цена: <span
                                                     class="prace-gbo__uah">14100</span>/<span class="prace-gbo__euro">544</span>
                                             </p>
@@ -190,6 +192,44 @@
                                     </div>
                                 </div>
                             </div>
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="box-sliderOffers">
+                                        <h4 class="box-gbo__mainPhrase">Портфолио работ по ГБО на Audi</h4>
+
+                                        <div class="box-sliderOffers__items ">
+                                            <a class="box-sliderOfferse__item"
+                                                href="img/offers/Audi/audi_1.jpg">
+                                                <img src="img/offers/Audi/min/audi_1min.jpg" title="" alt="offers_Audi">
+                                            </a>
+                                            <a class="box-sliderOffers__item"
+                                               href="img/offers/Audi/audi_2.jpg">
+                                                <img src="img/offers/Audi/min/audi_2min.jpg" title="" alt="offers_Audi">
+                                            </a>
+                                            <a class="box-sliderOffers__item"
+                                               href="img/offers/Audi/audi_3.jpg">
+                                                <img src="img/offers/Audi/min/audi_3min.jpg" title="" alt="offers_Audi">
+                                            </a>
+                                            <a class="box-sliderOffers__item"
+                                               href="img/offers/Audi/audi_4.jpg">
+                                                <img src="img/offers/Audi/min/audi_4min.jpg" title="" alt="offers_Audi">
+                                            </a>
+                                            <a class="box-sliderOffers__item"
+                                               href="img/offers/Audi/audi_5.jpg">
+                                                <img src="img/offers/Audi/min/audi_5min.jpg" title="" alt="offers_Audi">
+                                            </a>
+                                            <a class="box-sliderOffers__item"
+                                               href="img/offers/Audi/audi_6.jpg">
+                                                <img src="img/offers/Audi/min/audi_6min.jpg" title="" alt="slider1">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
 
                         </div>
 
@@ -213,7 +253,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="footerImg">
-                        <img src="img/footer1200.png" alt="footer">
+                        <img src="img/footer1200.png" title="" alt="footer">
                     </div>
 
                 </div>
