--- a/index_offers.html
+++ b/index_offers.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <img class="HEADER_img" src="img/header1200.png" title="" alt="header">
+                    <!--<img class="HEADER_img" src="img/header1200.png" title="" alt="header">-->
                     <!-- вставляеться стандартная шапка-->
                 </div>
             </div>
@@ -247,20 +247,20 @@
 
 <!--Поставить стандартный футер-->
 
-<footer>
-    <div class="box-footer-wrappen">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="footerImg">
-                        <img src="img/footer1200.png" title="" alt="footer">
-                    </div>
+<!--<footer>-->
+    <!--<div class="box-footer-wrappen">-->
+        <!--<div class="container">-->
+            <!--<div class="row">-->
+                <!--<div class="col-md-12">-->
+                    <!--<div class="footerImg">-->
+                        <!--<img src="img/footer1200.png" title="" alt="footer">-->
+                    <!--</div>-->
 
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</footer>-->
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
